@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% for dashboard in dash %}
+<h2>{{ dashboard.name }}</h2>
 <div class="col-md-4 col-sm-6 col-xs12">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h2>Last Temp</h2>
         </div>
         <div class="panel-body">
-            <h3 class="text-center">{{ temp.temp or 'N/A'}}</h3>
+            <h3 class="text-center">{{ dashboard.temperature or 'N/A'}}</h3>
         </div>
     </div>
 </div>
@@ -17,7 +19,7 @@
             <h2>Last Water Change</h2>
         </div>
         <div class="panel-body">
-            <h3 class="text-center">{{ moment(water.timestamp).calendar() if feed != None else 'N/A'}}</h3>
+            <h3 class="text-center">{{ moment(dashboard.waterchange).calendar() if dashboard.waterchange != None else 'N/A'}}</h3>
         </div>
     </div>
 </div>
@@ -27,8 +29,9 @@
             <h2>Days since feeding</h2>
         </div>
         <div class="panel-body">
-            <h3 class="text-center">{{ moment(feed.timestamp).calendar() if feed != None else 'N/A'}}</h3>
+            <h3 class="text-center">{{ moment(dashboard.feeding).calendar() if dashboard.feeding != None else 'N/A'}}</h3>
         </div>
     </div>
 </div>
+{% endfor %}
 {% endblock %}
