@@ -1,4 +1,5 @@
-Fixed erro if loading the index with a blank database
+Fixed error if loading the index with a blank database
 Updated migration/env.py to better support sqlite databases
 Updated app/__init__.py to better support sqlite databases
 Created the aquarium.html
+Updated all views to support multiple aquariums
